//plugins {
//	id 'java'
//	id 'org.springframework.boot' version '3.5.5'
//	id 'io.spring.dependency-management' version '1.1.7'
//}
//
//group = 'com.gymcrm'
//version = '0.0.1-SNAPSHOT'
//
//java {
//	toolchain {
//		languageVersion = JavaLanguageVersion.of(17)
//	}
//}
//
//repositories {
//	mavenCentral()
//}
//
//dependencies {
//	// Spring
//	implementation 'org.springframework.boot:spring-boot-starter'
//	implementation 'org.springframework.boot:spring-boot-starter-logging'
//
//	// JSON (initial-data.json)
//	implementation 'com.fasterxml.jackson.core:jackson-databind'
//
//	// Unit
//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'org.mockito:mockito-core:5.19.0'
//	testImplementation 'org.assertj:assertj-core:3.26.0'
//
//	// Lombok
//	compileOnly 'org.projectlombok:lombok:1.18.40'
//	annotationProcessor 'org.projectlombok:lombok:1.18.40'
//	testCompileOnly 'org.projectlombok:lombok:1.18.40'
//	testAnnotationProcessor 'org.projectlombok:lombok:1.18.40'
//
//	// Logging AOP
//	implementation 'org.springframework.boot:spring-boot-starter-aop'
//
//}
//
//test {
//	useJUnitPlatform()
//}


plugins {
	id 'java'
	id 'application'
}

group = 'com.gymcrm'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework:spring-context:6.2.7'
	implementation 'org.springframework:spring-aop:6.1.13'

	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'

	testImplementation 'org.springframework:spring-test:6.1.13'
	testImplementation 'org.mockito:mockito-core:5.19.0'
	testImplementation 'org.assertj:assertj-core:3.26.0'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.3'

	compileOnly 'org.projectlombok:lombok:1.18.40'
	annotationProcessor 'org.projectlombok:lombok:1.18.40'
	testCompileOnly 'org.projectlombok:lombok:1.18.40'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.40'

	implementation 'org.aspectj:aspectjweaver:1.9.22.1'
	implementation 'org.aspectj:aspectjrt:1.9.22.1'

	implementation 'ch.qos.logback:logback-classic:1.5.13'
}

application {
	mainClass = 'com.gymcrm.gym_crm_spring.GymCrmSpringApplication'
}

test {
	useJUnitPlatform()
}

